<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="update">上传</string>
    <string name="before">上一张</string>
    <string name="after">下一张</string>
    <string name="photo">拍照</string>
    <string name="picture">图片</string>
    <string name="off">取消</string>

</resources>
