<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <Button
        android:id="@+id/photo_button"
        android:text="@string/photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/picture_button"
        android:text="@string/picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/off_button"
        android:text="@string/off"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
