<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/main2"
        layout="@layout/picture_cycle" />

    <Button android:id="@+id/add_picture"
        android:text="@string/update"
        android:layout_gravity="center"
        android:layout_marginTop="-130dp"
        android:layout_width="100dp"
        android:layout_height="70dp" />

    <Button android:id="@+id/before_picture"
        android:text="@string/before"
        android:layout_gravity="left"
        android:layout_marginTop="-70dp"
        android:layout_width="100dp"
        android:layout_height="70dp" />

    <Button android:id="@+id/after_picture"
        android:text="@string/after"
        android:layout_gravity="right"
        android:layout_marginTop="-70dp"
        android:layout_width="100dp"
        android:layout_height="70dp" />

</LinearLayout>
